# serialproxy

./: .gitignore  AUTHORS  COPYING  Makefile.am  README  configure.ac  serialproxy.rc
doc/doxygen/: .gitignore  Makefile.am  doxyfile.in  doxygen.dox.in  ht1_main.dox  ht2_proxy.dox  ht3_control.dox  ht4_configuration.dox  ht5_utilities.dox
doc/doxygen/html/: annotated.html  classes.html  common_8h.html  common_8h_source.html  control_8h.html  control_8h_source.html  dir_1472ceb3788f9ceeed9555936db608c4.html  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2.html  dir_777be0c10bae224fdba9af5fef076d2c.html  dir_9db7bfab509d4a378009c2d9fcc5e2e1.html  dir_cc019ff4d272cb1bf1d88f731a6e27f2.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  group__config.html  group__control.html  group__main.html  group__proxy.html  group__serialproxy.html  group__utils.html  index.html  menudata.js  modules.html  pages.html  proxy_8h.html  proxy_8h_source.html  revision_8h.html  revision_8h_source.html  serialproxy_8h.html  serialproxy_8h_source.html  serialproxy_changelog.html  serialproxy_install.html  serialproxy_license.html  sp__config_8h.html  sp__config_8h_source.html  sp__log_8h_source.html  (+5 more)
doc/doxygen/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  groups_2.js  groups_3.js  pages_0.js  pages_2.js  searchdata.js  variables_0.js  variables_1.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js
m4/: .gitignore  ax_git_revision.m4
src/: Makefile.am  common.h  control.c  control.h  proxy.c  proxy.h  revision.c  revision.h  serialproxy.c  serialproxy.h  sp_config.c  sp_config.h  sp_log.c  sp_log.h  strutils.c  strutils.h
